# CryptoIA

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  ingest_orderbook.py  requirements-dev.txt
docs/: AGENTS.md  AGENTS_STATUS.md  AGENT_CONFIGS.md  ANALYST_ROADMAP_V3.md  ANALYST_TUNING_GUIDE.md  ARCHITECTURE.md  BACKTEST_RUNBOOK.md  BITCOIN_THEORY.md  DATA_SOURCES.md  DB_SCHEMA.md  ENV.md  LIVE_TRADING_CHECKLIST.md  LLM_FAILSAFE.md  LOGGING_GUIDE.md  METRICS_BASELINE.md  MONITORING_ANALYST.md  OBSERVABILITY.md  OPERATIONS.md  OPS_SECURITY.md  PAPER_TRADING_RUNBOOK.md  PAYMENTS.md  PERFORMANCE_OPTIMIZATION.md  README.md  ROADMAP_V2.md  RUNBOOK.md  SERVICES.md  STRATEGIC_AGENTS.md  TELEGRAM_BOT.md  TODO.md  TRADING.md  TRADING_PRIMER.md
flowise_data/: database.sqlite  encryption.key
migrations/: 001_init.sql  002_pgvector.sql  003_indexes.sql  004_agents.sql  005_sources.sql  006_news_conf_vector.sql  007_alt_data.sql  008_validation.sql  009_feedback.sql  010_trading.sql  011_subscriptions_redeem.sql  012_model_registry.sql  012_news_facts.sql  013_prediction_outcomes.sql  013_users.sql  014_regime_trust.sql  017_payments.sql  018_affiliates.sql  019_affiliate_requests.sql  020_payments_alter.sql  021_subscriptions.sql  022_user_insights.sql  023_run_summaries.sql  024_model_trust_event.sql  025_technical_patterns.sql  026_agent_configurations.sql  027_pattern_metrics.sql  (+18 more)
services/crypto_pay_api/: pyproject.toml
services/crypto_pay_api/src/crypto_pay_api/: main.py
services/crypto_pay_api/tests/: test_confirm.py
(+256 files in other folders)
