[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto_pay_api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "loguru==0.7.2",
    "psycopg2-binary==2.9.9",
    # Declared to surface the cross-package dependency; install pipeline first (e.g. `pip install -e services/pipeline`).
    "pipeline>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
